# superwhisper

./: .gitignore  CMakeLists.txt  Info.plist  README.md  build.sh  build_cli.sh  config.json.example  download_fast_model.sh  quick_start.sh  test_build.sh  test_cli.sh  test_json.json  test_output.json  test_output.txt
fwhisper/: activate.sh  requirements.txt  transcribe_and_paste.py  transcribe_and_paste.py.bkp
src/: audio_recorder.cpp  audio_recorder.hpp  cli_main.cpp  gui_manager.cpp  gui_manager.hpp  hotkey_manager.cpp  hotkey_manager.hpp  main.cpp  settings.cpp  settings.hpp  superwhisper.hpp  whisper_wrapper.cpp  whisper_wrapper.hpp
